# Sovereign-Stack-Complete

./: ._deploy  README.md  tent_tests.py  test_integration.py
arc/: arc_abstraction.py  arc_augment.py  arc_bra.py  arc_dsl_ext.py  arc_eval.py  arc_hermes.py  arc_memory.py  arc_neuro.py  arc_programs.py  arc_renderer.py  arc_search.py  arc_solver.py  arc_types.py  test_mcr2_bra_equivalence.py
deploy/: Dockerfile.sovereign  docker-compose.yml  openclaw.json  sovereign_requirements.txt
docs/: CLAUDE.md  MCR2_to_BRA_Equivalence.md  README.md  SOUL.md
hermes_vexel_flow/: flow_agent.py  flow_hooks.py  hermes_config.yaml  hermes_hooks.py  hermes_vexel.py  hermes_vqa.py  vexel_flow.py
papers/: BRA_vs_TensorFlow_Benchmark.docx  SEGGCI_Paper.docx  rc_backlog.tex  rc_backlog_report.tex  seggci_unified.tex  trinity_core_BRA.tex  unified_stack_paper.tex
rust_core/: Cargo.toml  arc_heuristics.rs  council.rs  family.rs  lib.rs  main.rs  sovereignty.rs  trinity_core.rs  vexel.rs  vexel2.rs
session_daw/: session_daw.py
tent_seggci/: lexenv.py  rc13_stakes.py  rc14_escalation.py  reasoning_engine.py  seed.py  siggeo.py  sovereign_shell.py  tent_v10_pipeline.py  tent_v10_vixel.py  tent_v9_production.py
